Migrate epoch beginning and ending notification cron tasks (#654)
* set up epoch start notifications

* Add End Notifications

* Add unit tests

* Reset cron timing to production frequency

* Allow api functions to run in CI

* Implement End Epoch Cron Task (#695)

* Implement End Epoch Cron Task

resolves #524

test plan:

1. set up a an epoch with ended=false and an end_date < `now()` in the
   database. Add some pending gifts to the db with this epoch id if none
   already exist. Check that some users in the relevant circle have less
   than the starting amount of give remaining. in the relevant circle
   set auto_opt_out = true.
2. run `vercel dev`
3. observe the bios get transferred to histories with the relevant
   epoch_ids. Observe pending_token_gifts for the epoch get transferred
   to token_gifts. observe users who didn't spend share any give get
   opted out. observe all users in the circle get reset with
   epoch_first_visit = true and all token memos reset.

* Add `days` column as the primary determinant of Epoch Length

* Prevent non-givers from getting auto-opted out

--- a/hasura/metadata/cron_triggers.yaml
+++ b/hasura/metadata/cron_triggers.yaml
@@ -19,3 +19,17 @@
   headers:
   - name: verification_key
     value_from_env: HASURA_EVENT_SECRET
+- name: epoch
+  webhook: '{{HASURA_API_BASE_URL}}/cron/epochs'
+  schedule: '*/5 * * * *'
+  include_in_metadata: true
+  payload: {}
+  retry_conf:
+    num_retries: 0
+    timeout_seconds: 240
+    tolerance_seconds: 21600
+    retry_interval_seconds: 10
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  comment: manage time-based epoch business logic
