--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -82,6 +82,16 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: updateCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateCircle'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
 - name: updateTeammates
   definition:
     kind: synchronous
@@ -161,6 +171,7 @@ custom_types:
   - name: CreateEpochInput
   - name: UpdateTeammatesInput
   - name: DeleteUserInput
+  - name: UpdateCircleInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -262,4 +273,14 @@ custom_types:
       field_mapping:
         user_id: id
   - name: ConfirmationResponse
+  - name: UpdateCircleOutput
+    relationships:
+    - remote_table:
+        schema: public
+        name: circles
+      name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
   scalars: []
