--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -57,11 +57,11 @@ actions:
     kind: synchronous
     handler: '{{HASURA_API_BASE_URL}}/actions/deleteEpoch'
     headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
-    - role: user
-    - role: superadmin
+  - role: user
+  - role: superadmin
 - name: logoutUser
   definition:
     kind: synchronous
@@ -72,6 +72,16 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: updateEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateEpoch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: updateTeammates
   definition:
     kind: synchronous
@@ -150,6 +160,8 @@ custom_types:
   - name: VouchInput
   - name: CreateEpochInput
   - name: UpdateTeammatesInput
+  - name: UploadEpochInput
+  - name: UpdateEpochInput
   objects:
   - name: CreateCircleResponse
     relationships:
