--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -51,6 +51,15 @@ array_relationships:
       table:
         name: circle_integrations
         schema: public
+- name: nominees
+  using:
+    manual_configuration:
+      column_mapping:
+        id: circle_id
+      insertion_order: null
+      remote_table:
+        name: nominees
+        schema: public
 - name: pending_token_gifts
   using:
     foreign_key_constraint_on:
