--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -58,6 +58,7 @@ select_permissions:
     filter: {}
   role: superadmin
 - permission:
+    allow_aggregations: true
     columns:
     - address
     - circle_id
