add circles-nominees hasura relation & add missing foreign keys (#717)
* update zeus schema
* allow aggregation on nominees

Co-authored-by: Kevin Siegler <17910833+topocount@users.noreply.github.com>

--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -51,6 +51,13 @@ array_relationships:
       table:
         name: circle_integrations
         schema: public
+- name: nominees
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: nominees
+        schema: public
 - name: pending_token_gifts
   using:
     foreign_key_constraint_on:
