Added new_amount column for claims and distribution_epoch column and json to distribution table

--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -47,6 +47,7 @@ select_permissions:
     - distribution_id
     - id
     - index
+    - new_amount
     - proof
     - updated_at
     - updated_by
