--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sentry/tracing": "6.19.2",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
+    "@types/luxon": "^2.3.1",
     "@types/sharp": "^0.29.5",
     "@types/uuid": "^8.3.4",
     "@web3-react/core": "6.1.9",
@@ -44,7 +45,7 @@
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
     "logdown": "3.3.1",
-    "luxon": "2.0.2",
+    "luxon": "2.3.1",
     "node-fetch": "2.6.7",
     "notistack": "1.0.10",
     "polished": "4.1.1",
@@ -152,7 +153,6 @@
     "@types/faker": "^5.5.9",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
-    "@types/luxon": "2.0.2",
     "@types/node": "12.20.1",
     "@types/react": "17.0.27",
     "@types/react-dom": "17.0.9",
