--- a/hasura/metadata/databases/default/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/default/tables/public_profiles.yaml
@@ -78,5 +78,24 @@ update_permissions:
       id:
         _eq: X-Hasura-User-Id
     set:
-      id: x-hasura-User-Id
+      id: X-Hasura-User-Id
   role: user
+- permission:
+    check: null
+    columns:
+      - avatar
+      - background
+      - bio
+      - discord_username
+      - github_username
+      - medium_username
+      - skills
+      - telegram_username
+      - twitter_username
+      - website
+    filter:
+      id:
+        _eq: X-Hasura-User-Id
+    set:
+      id: X-Hasura-User-Id
+  role: superadmin
