fixes #633 by integrating updateProfile graphql into FE (#721)
* fixes #633 by integrating updateProfile graphql into FE

* incorporating topo's refactor

* allowing for clearing out of website

* fixing up perms, improved placeholder, and transforming error message on invalid website

--- a/hasura/metadata/databases/default/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/default/tables/public_profiles.yaml
@@ -77,4 +77,25 @@ update_permissions:
     filter:
       id:
         _eq: X-Hasura-User-Id
+    set:
+      id: X-Hasura-User-Id
   role: user
+- permission:
+    check: null
+    columns:
+      - avatar
+      - background
+      - bio
+      - discord_username
+      - github_username
+      - medium_username
+      - skills
+      - telegram_username
+      - twitter_username
+      - website
+    filter:
+      id:
+        _eq: X-Hasura-User-Id
+    set:
+      id: X-Hasura-User-Id
+  role: superadmin
