--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "stream": "^0.0.2",
     "styled-components": "5.2.3",
     "true-myth": "4.1.1",
+    "ts-node": "10.7.0",
     "uuid": "^8.3.2",
     "zod": "3.11.6"
   },
@@ -146,6 +147,7 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
+    "@tsconfig/node14": "1.0.1",
     "@types/debug": "4.1.7",
     "@types/dedent": "^0.7.0",
     "@types/ethereumjs-util": "6.1.0",
@@ -166,7 +168,6 @@
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "dotenv-expand": "6.0.1",
-    "esbuild": "0.12.29",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
