bugfix: remove dom dependency for NodeJS ts code
We were intiially relying on the frontend tsconfig.json file to
typecheck our api handlers. This is bad because we're expecting dom
libraries to be accessible in our backend ts code. This led to some
funky things like "shimming" node-fetch into our code when it should
work out of the box.

test plan:

1. vercel dev
2. ensure webpack is able to build
3. test some endpoints but this isn't technically necessary
4. `yarn db-seed-fresh` just to be safe.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,9 +17,7 @@
     "jsx": "react-jsx",
     "baseUrl": "src",
     "paths": {
-      "@emotion/core": [
-        "./types/emotion-core-stub.d.ts"
-      ]
+      "@emotion/core": ["./types/emotion-core-stub.d.ts"]
     },
     "plugins": [
       {
@@ -32,9 +26,5 @@
       }
     ]
   },
-  "include": [
-    "src",
-    "api-lib",
-    "api"
-  ]
+  "include": ["src"]
 }
