allow viewing all circles in org
& show non-member circles last

--- a/hasura/metadata/databases/default/tables/public_protocols.yaml
+++ b/hasura/metadata/databases/default/tables/public_protocols.yaml
@@ -35,7 +35,10 @@ select_permissions:
     filter:
       circles:
         users:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
+          _and:
+          - profile:
+              id:
+                _eq: X-Hasura-User-Id
+          - deleted_at:
+              _is_null: true
   role: user
