--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -119,10 +119,15 @@ select_permissions:
     - vouching
     - vouching_text
     filter:
-      users:
-        profile:
-          id:
-            _eq: X-Hasura-User-Id
+      organization:
+        circles:
+          users:
+            _and:
+            - profile:
+                id:
+                  _eq: X-Hasura-User-Id
+            - deleted_at:
+                _is_null: true
   role: user
 update_permissions:
 - permission:
