--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "@sentry/tracing": "6.19.2",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
-    "@types/sharp": "^0.29.5",
-    "@types/uuid": "^8.3.4",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
@@ -44,7 +42,7 @@
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
     "logdown": "3.3.1",
-    "luxon": "2.0.2",
+    "luxon": "2.3.1",
     "node-fetch": "2.6.7",
     "notistack": "1.0.10",
     "polished": "4.1.1",
@@ -154,12 +152,14 @@
     "@types/faker": "^5.5.9",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
-    "@types/luxon": "2.0.2",
+    "@types/luxon": "^2.3.1",
     "@types/node": "12.20.1",
     "@types/react": "17.0.27",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.1.7",
     "@types/react-virtualized-auto-sizer": "1.0.0",
+    "@types/sharp": "^0.29.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vercel/node": "1.12.1",
