--- a/hasura/metadata/databases/default/tables/public_epoches.yaml
+++ b/hasura/metadata/databases/default/tables/public_epoches.yaml
@@ -79,8 +79,13 @@ select_permissions:
     - updated_at
     filter:
       circle:
-        users:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
+        organization:
+          circles:
+            users:
+              _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - deleted_at:
+                  _is_null: true
   role: user
