--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -75,10 +75,15 @@ select_permissions:
     - vouches_required
     filter:
       circle:
-        users:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
+        organization:
+          circles:
+            users:
+              _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - deleted_at:
+                  _is_null: true
   role: user
 event_triggers:
 - definition:
