--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,286 +1,319 @@
 actions:
-  - name: adminUpdateUser
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/adminUpdateUser'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: createCircle
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/createCircle'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: createEpoch
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/createEpoch'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: createNominee
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/createNominee'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: createUser
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/createUser'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: deleteEpoch
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/deleteEpoch'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: deleteUser
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/deleteUser'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: logoutUser
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/logoutUser'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: superadmin
-      - role: user
-  - name: updateCircle
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/updateCircle'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: superadmin
-      - role: user
-  - name: updateTeammates
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/updateTeammates'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: updateUser
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/updateUser'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: superadmin
-      - role: user
-    comment: Update own user
-  - name: uploadCircleLogo
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/uploadCircleLogo'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: uploadProfileAvatar
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileAvatar'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: uploadProfileBackground
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileBackground'
-      forward_client_headers: true
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
-  - name: vouch
-    definition:
-      kind: synchronous
-      handler: '{{HASURA_API_BASE_URL}}/actions/vouch'
-      headers:
-        - name: verification_key
-          value_from_env: HASURA_EVENT_SECRET
-    permissions:
-      - role: user
-      - role: superadmin
+- name: adminUpdateUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/adminUpdateUser'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createCircle'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createEpoch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createNominee
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createNominee'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createUser'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: deleteEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/deleteEpoch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: deleteUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/deleteUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: logoutUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/logoutUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
+- name: updateAllocations
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateAllocations'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: updateCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateCircle'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
+- name: updateEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateEpoch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: updateTeammates
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateTeammates'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: updateUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
+  comment: Update own user
+- name: uploadCircleLogo
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadCircleLogo'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: uploadProfileAvatar
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileAvatar'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: uploadProfileBackground
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileBackground'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: vouch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/vouch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 custom_types:
   enums: []
   input_objects:
-    - name: CreateCircleInput
-    - name: CreateUserInput
-    - name: UploadImageInput
-    - name: UploadCircleImageInput
-    - name: AdminUpdateUserInput
-    - name: DeleteEpochInput
-    - name: CreateNomineeInput
-    - name: UpdateUserInput
-    - name: VouchInput
-    - name: CreateEpochInput
-    - name: UpdateTeammatesInput
-    - name: DeleteUserInput
-    - name: UpdateCircleInput
+  - name: CreateCircleInput
+  - name: CreateUserInput
+  - name: UploadImageInput
+  - name: UploadCircleImageInput
+  - name: AdminUpdateUserInput
+  - name: DeleteEpochInput
+  - name: CreateNomineeInput
+  - name: UpdateUserInput
+  - name: VouchInput
+  - name: CreateEpochInput
+  - name: UpdateTeammatesInput
+  - name: DeleteUserInput
+  - name: UpdateCircleInput
+  - name: UpdateEpochInput
+  - name: Allocation
+  - name: Allocations
   objects:
-    - name: CreateCircleResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: users
-          name: users
-          source: default
-          type: array
-          field_mapping:
-            id: circle_id
-        - remote_table:
-            schema: public
-            name: circles
-          name: circle
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: UpdateProfileResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: profiles
-          name: profile
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: UpdateCircleResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: circles
-          name: circle
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: LogoutResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: profiles
-          name: profile
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: UserResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: users
-          name: UserResponse
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: DeleteEpochResponse
-    - name: CreateNomineeResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: nominees
-          name: nominee
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: VouchOutput
-      relationships:
-        - remote_table:
-            schema: public
-            name: nominees
-          name: nominee
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: EpochResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: epoches
-          name: epoch
-          source: default
-          type: object
-          field_mapping:
-            id: id
-    - name: UpdateTeammatesResponse
-      relationships:
-        - remote_table:
-            schema: public
-            name: users
-          name: user
-          source: default
-          type: object
-          field_mapping:
-            user_id: id
-    - name: ConfirmationResponse
-    - name: UpdateCircleOutput
-      relationships:
-        - remote_table:
-            schema: public
-            name: circles
-          name: circle
-          source: default
-          type: object
-          field_mapping:
-            id: id
+  - name: CreateCircleResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: users
+      source: default
+      type: array
+      field_mapping:
+        id: circle_id
+    - remote_table:
+        schema: public
+        name: circles
+      name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UpdateProfileResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UpdateCircleResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: circles
+      name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: LogoutResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UserResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: UserResponse
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: DeleteEpochResponse
+  - name: CreateNomineeResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: VouchOutput
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: EpochResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: epoches
+      name: epoch
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UpdateTeammatesResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: user
+      source: default
+      type: object
+      field_mapping:
+        user_id: id
+  - name: ConfirmationResponse
+  - name: UpdateCircleOutput
+    relationships:
+    - remote_table:
+        schema: public
+        name: circles
+      name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: AllocationsResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: user
+      source: default
+      type: object
+      field_mapping:
+        user_id: id
   scalars: []
