--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -82,6 +82,13 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: restoreUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/restoreUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
 - name: updateAllocations
   definition:
     kind: synchronous
@@ -195,6 +202,7 @@ custom_types:
   - name: UpdateEpochInput
   - name: Allocation
   - name: Allocations
+  - name: DeletedUserInput
   objects:
   - name: CreateCircleResponse
     relationships:
