--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
+    "cypress": "9.5.3",
     "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -200,6 +201,7 @@
     "ttypescript": "^1.5.13",
     "typescript": "4.4.3",
     "util": "0.12.4",
+    "web3-provider-engine": "15.0.12",
     "webpack": "5"
   }
 }
