setup hasura in CI
- use profiles to start only a subset of images in docker-compose.yml
- add a copy of the graphql-engine image that starts on a different port
- add a step between starting postgres & starting hasura that creates a new test db (there's got to be a better way to do this)

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
+CI_POSTGRES_DATABASE=ci
+CI_HASURA_PORT=8081
+
 # Hardhat
 HARDHAT_CHAIN_ID=1337
 HARDHAT_PORT=8545
