--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,8 @@ jobs:
       REACT_APP_S3_BASE_URL: https://coordinape.s3.amazonaws.com
       REACT_APP_HASURA_URL: https://coordinape-staging.hasura.app/v1/graphql
       REACT_APP_INFURA_PROJECT_ID: 275c8fc2ec294d6aac6bfc881d9a9dff
+      CI_HASURA_PORT: 8081
+      CI_POSTGRES_DATABASE: ci
 
     steps:
       - uses: actions/checkout@v2
