--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "db-disable-cron": "scripts/disable_cron.sh",
     "generate": "./scripts/generate_zeus.sh",
     "hasura": "hasura --skip-update-check --envfile ../.env --project ./hasura",
-    "docker:start": "docker-compose up -d",
-    "docker:stop": "docker-compose down",
-    "docker:clean": "docker-compose down -v",
+    "docker:start": "docker compose --profile dev up -d",
+    "docker:stop": "docker compose down",
+    "docker:clean": "docker compose down -v",
     "start": "craco start",
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
