Implement createUsers in bulk Hasura action. Resolves #775
* new users will be inserted in the db.
* existing soft-deleted users will be restored.
* if existing users contains in the provided list but not soft-deleted
it will return an error.
* if the provided list in payload contains any duplicated it will
throw error.

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -62,6 +62,17 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createUsers
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createUsers'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: deleteEpoch
   definition:
     kind: synchronous
@@ -206,6 +217,8 @@ custom_types:
   - name: Allocation
   - name: Allocations
   - name: AllocationCsvInput
+  - name: CreateUsersInput
+  - name: UserObj
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -328,4 +341,6 @@ custom_types:
       field_mapping:
         user_id: id
   - name: AllocationCsvResponse
+  - name: CreateUsersResponse
+  - name: UserOutput
   scalars: []
