--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
     "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-popover": "^0.1.6",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.19.2",
     "@sentry/node": "6.19.2",
