--- a/.eslintrc
+++ b/.eslintrc
@@ -116,6 +116,13 @@
     "react/react-in-jsx-scope": "off"
   },
   "overrides": [
+    // Turn off rules of hooks in non React code so useZeusVariables doesn't show errors
+    {
+      "files": ["src/lib/gql/*.ts"],
+      "rules": {
+        "react-hooks/rules-of-hooks": "off"
+      }
+    },
     {
       "files": ["**/*.stories.*"],
       "rules": {
