--- a/tsconfig-backend.json
+++ b/tsconfig-backend.json
@@ -1,5 +1,6 @@
 {
   "extends": "@tsconfig/node14/tsconfig.json",
+  "include": ["api/**/*", "api-lib/**/*", "scripts/**/*"],
   "compilerOptions": {
     "lib": ["es2021", "esnext"],
     "noErrorTruncation": true
