--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@datamodels/identity-accounts-crypto": "0.1.2",
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
+    "@faker-js/faker": "6.2.0",
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
     "@graphql-eslint/eslint-plugin": "3.8.0",
