--- a/tsconfig-backend.json
+++ b/tsconfig-backend.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2021", "esnext"]
+    "lib": ["es2021", "esnext"],
+    "noErrorTruncation": true
   }
 }
