--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aws-sdk": "^2.1072.0",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
+    "date-fns": "^2.28.0",
     "dedent": "^0.7.0",
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
