reduce concurrency in tests
to stop test failures due to... ganache getting overwhelmed? or some overlapping logic

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "hardhat:dev": "yarn --cwd hardhat dev",
     "hardhat:ganache": "./hardhat/scripts/start-ganache.sh",
     "hardhat:test": "yarn --cwd hardhat test",
-    "test": "yarn hardhat:ganache --exec craco test",
+    "test": "yarn hardhat:ganache --exec craco test --maxWorkers=2",
     "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
