Move CI postgres to its own container

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
-CI_POSTGRES_DATABASE=ci
 CI_HASURA_PORT=8081
+CI_POSTGRES_PORT=4321
 
 # Hardhat
 HARDHAT_CHAIN_ID=1337
