Update vercel token name

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
 CI_HASURA_PORT=8081
 CI_POSTGRES_PORT=4321
+CI_VERCEL_TOKEN=abc123
 
 # Hardhat
 HARDHAT_CHAIN_ID=1337
