--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,11 +16,11 @@ jobs:
       REACT_APP_INFURA_PROJECT_ID: 275c8fc2ec294d6aac6bfc881d9a9dff
       CI_HASURA_PORT: 8081
       CI_POSTGRES_PORT: 4321
+      CI_VERCEL_TOKEN: ${{ secrets.CI_VERCEL_TOKEN }}
       HASURA_EVENT_SECRET: event-secret
       HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
       LOCAL_POSTGRES_PORT: 5432
       LOCAL_VERCEL_PORT: 3000
-      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       LOCAL_POSTGRES_USER: postgres
       LOCAL_POSTGRES_PASSWORD: postgrespassword
       LOCAL_POSTGRES_DATABASE: postgres
