--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
 
   # for local s3 storage for images
   localstack:
-    profiles: ['dev']
+    profiles: ['dev', 'ci']
     image: localstack/localstack:latest
     restart: always
     hostname: s3
