Add discrete wallet to TestProvider
This is needed because we don't want to wallets through the different
JSON-RPC apis on hardhat and ganache.

--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "cypress": "9.5.3",
+    "cypress-dotenv": "2.0.0",
     "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -181,6 +182,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "41.0.0",
+    "ethereumjs-wallet": "1.0.2",
     "execa": "6.0.0",
     "figma-api": "1.9.2",
     "hasura-cli": "2.2.0",
