--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
+CI_HASURA_PORT=8081
+CI_POSTGRES_PORT=4321
+CI_VERCEL_PORT=3001
+CI_VERCEL_TOKEN=abc123
+
 # Hardhat
 HARDHAT_CHAIN_ID=1337
 HARDHAT_PORT=8545
@@ -44,6 +49,11 @@ IMAGES_AWS_BUCKET=coordinape
 # Production Environment
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
 #REACT_APP_S3_BASE_URL=https://coordinape-prod.s3.amazonaws.com/
+
+# CI Environment - added as env vars in github if no conflicts exist
+#NODE_HASURA_URL=http://localhost:8081/v1/graphql
+#HASURA_GRAPHQL_ENDPOINT=http://localhost:8081
+#REACT_APP_HASURA_URL=http://localhost:8081/v1/graphql
 
 # for src/scripts
 # go to https://www.figma.com/developers/api#authentication
