--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -2,12 +2,12 @@ table:
   name: vaults
   schema: public
 object_relationships:
+- name: profile
+  using:
+    foreign_key_constraint_on: created_by
 - name: protocol
   using:
     foreign_key_constraint_on: org_id
-- name: user
-  using:
-    foreign_key_constraint_on: created_by
 array_relationships:
 - name: vault_transactions
   using:
@@ -30,6 +30,7 @@ insert_permissions:
                 id:
                   _eq: X-Hasura-User-Id
     columns:
+    - created_by
     - decimals
     - id
     - org_id
