--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql": "16.2.0",
     "graphql-zeus": "5.0.2",
     "itiriri": "2.0.1",
+    "keccak": "^3.0.2",
     "lodash": "4.17.21",
     "logdown": "3.3.1",
     "luxon": "2.3.1",
