--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql": "16.2.0",
     "graphql-zeus": "4.0.4",
     "itiriri": "2.0.1",
+    "keccak": "^3.0.2",
     "lodash": "4.17.21",
     "logdown": "3.3.1",
     "luxon": "2.3.1",
@@ -57,6 +58,8 @@
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
     "sharp": "^0.30.1",
+    "siwe": "link:./../siwe/packages/siwe",
+    "siwe-parser": "link:./../siwe/packages/siwe-parser",
     "source-map-explorer": "2.5.2",
     "stream": "^0.0.2",
     "styled-components": "5.2.3",
