--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "crypto-browserify": "3.12.0",
     "cypress": "9.5.3",
     "cypress-dotenv": "2.0.0",
+    "dotenv": "16.0.0",
     "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
