--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "generate": "./scripts/generate_zeus.sh",
     "hasura": "hasura --skip-update-check --envfile ../.env --project ./hasura",
     "docker:start": "docker compose --profile dev up -d",
-    "docker:stop": "docker compose down",
-    "docker:clean": "docker compose down -v",
+    "docker:stop": "docker compose --profile dev down",
+    "docker:clean": "docker compose --profile dev down -v",
     "cy:dev": "cypress open > /dev/null",
     "cy:run": "cypress run",
     "start": "craco start",
