initial styling with stitches

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
-    "@radix-ui/react-dialog": "^0.1.7",
-    "@self.id/core": "0.1.0",
     "@radix-ui/react-avatar": "^0.1.4",
+    "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-hover-card": "^0.1.5",
+    "@radix-ui/react-toggle-group": "^0.1.5",
+    "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.19.2",
     "@sentry/node": "6.19.2",
     "@sentry/react": "6.19.2",
