Integrate createVault in frontend
Also fixed some errors in the API handler

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -357,7 +357,7 @@ custom_types:
     - remote_table:
         schema: public
         name: vaults
-      name: createVault_vault
+      name: vault
       source: default
       type: object
       field_mapping:
