--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -81,6 +81,8 @@ select_permissions:
     - created_at
     - default_opt_in
     - discord_webhook
+    - fixed_payment_enabled
+    - fixed_payment_token_type
     - id
     - is_verified
     - logo
@@ -104,6 +106,8 @@ select_permissions:
     - auto_opt_out
     - created_at
     - default_opt_in
+    - fixed_payment_enabled
+    - fixed_payment_token_type
     - id
     - is_verified
     - logo
@@ -137,6 +141,8 @@ update_permissions:
     - auto_opt_out
     - default_opt_in
     - discord_webhook
+    - fixed_payment_enabled
+    - fixed_payment_token_type
     - is_verified
     - logo
     - min_vouches
