--- a/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/hasura/metadata/databases/default/tables/public_users.yaml
@@ -8,6 +8,15 @@ object_relationships:
 - name: profile
   using:
     foreign_key_constraint_on: address
+- name: user_private
+  using:
+    manual_configuration:
+      column_mapping:
+        id: user_id
+      insertion_order: null
+      remote_table:
+        name: user_private
+        schema: public
 array_relationships:
 - name: burns
   using:
